modified:   _templates/footer.html (fix shared icon) modified:   _templates/searchbox.html(Add intl Nav)

--- a/_templates/searchbox.html
+++ b/_templates/searchbox.html
@@ -1,1 +1,16 @@
 <!-- Empty override file take the place of searchbox.html, which generates search box. -->
+<intl>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <nav class="w3-dropdown-hover">
+        <button class="w3-button">intl</button>
+        <ul class="w3-dropdown-content w3-bar-block w3-card-4">
+            <li>
+                <a href="https://nuitka.net/">Home</a>
+            </li>
+            <li>
+                <a href="https://nuitka.net/zh_CN/">zh_CN</a>
+            </li>
+        </ul>
+        <div >
+    </nav>
+<intl>
