modified:   _templates/searchbox.html

--- a/_templates/searchbox.html
+++ b/_templates/searchbox.html
@@ -2,8 +2,8 @@
 <intl>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <nav class="w3-dropdown-hover">
-        <button class="w3-button">intl</button>
-        <ul class="w3-dropdown-content w3-bar-block w3-card-4">
+        <button class="w3-button w3-samll">intl</button>
+        <ul class="w3-dropdown-content">
             <li>
                 <a href="https://nuitka.net/">Home</a>
             </li>
