--- a/_templates/footer.html
+++ b/_templates/footer.html
@@ -7,7 +7,7 @@
         <a href="https://twitter.com/share?url={{ pageurl|e }}&hashtags=nuitka" target="_blank">
             <div class="socialbutton twitter" data-share-url="https://nuitka.net">
                 <p class="icon">
-                    <img src="_static/icon-twitter.png">
+                    <img src="../_static/icon-twitter.png">
                 </p>
 
                 <p class="shares">share...</p>
@@ -17,7 +17,7 @@
         <a href="https://www.facebook.com/sharer.php?u={{ pageurl|e }}&hashtag=%23nuitka"  target="_blank">
             <div class="socialbutton facebook" data-share-url="https://nuitka.net">
                 <p class="icon">
-                    <img src="_static/icon-facebook.png">
+                    <img src="../_static/icon-facebook.png">
                 </p>
 
                 <p class="shares">share...</p>
@@ -27,7 +27,7 @@
         <a href="http://www.reddit.com/submit?url={{ pageurl|e }}" target="_blank">
             <div class="socialbutton reddit">
                 <p class="icon">
-                    <img src="_static/icon-reddit.png">
+                    <img src="../_static/icon-reddit.png">
                 </p>
 
                 <p class="shares">share...</p>
