modified:   _templates/searchbox.html

--- a/_templates/searchbox.html
+++ b/_templates/searchbox.html
@@ -5,10 +5,10 @@
         <button class="w3-button w3-samll">intl</button>
         <ul class="w3-dropdown-content">
             <li>
-                <a href="https://nuitka.net/">Home</a>
+                <a href="https://translation.nuitka.net/">Home</a>
             </li>
             <li>
-                <a href="https://nuitka.net/zh_CN/">zh_CN</a>
+                <a href="https://translation.nuitka.net/zh_CN/">zh_CN</a>
             </li>
         </ul>
         <div >
