Disable the language switcher for IE, not proper layout, and we don't care enough
* Just lets avoid it looking broken

--- a/_templates/footer.html
+++ b/_templates/footer.html
@@ -34,6 +34,7 @@
             </div>
         </a>
 
+        <!--[if !IE]><!-->
         <details class="sd-sphinx-override sd-dropdown sd-card sd-mb-3 switcher-container">
             <summary class="sd-summary-title sd-card-header switcher-title">
                 EN<div class="sd-summary-down docutils">
@@ -64,6 +65,7 @@
                 </blockquote>
             </div>
         </details>
+        <!--<![endif]-->
     </div>
 </div>
 
