added mastodon sharing button

--- a/_templates/footer.html
+++ b/_templates/footer.html
@@ -24,6 +24,16 @@
             </div>
         </a>
 
+        <a href="https://mastodonshare.com/?url={{ pageurl|e }}" target="_blank">
+            <div class="socialbutton mastodon">
+                <p class="icon">
+                    <img src="/_static/icon-mastodon.svg">
+                </p>
+
+                <p class="shares">share...</p>
+            </div>
+        </a>
+
         <a href="http://www.reddit.com/submit?url={{ pageurl|e }}" target="_blank">
             <div class="socialbutton reddit">
                 <p class="icon">
