--- a/_templates/footer.html
+++ b/_templates/footer.html
@@ -1,16 +1,13 @@
-{%- extends "!page.html" %}
+{% extends "!footer.html" %}
 
-{% block body %}
-{% if pagename in ablog %}
-{% include "ablog/postcard.html" %}
-{% endif %}
+{%- block extrafooter %}
 <div class='share-button-container'>
     <div class="socialbutton-wrapper">
 
         <a href="https://twitter.com/share?url={{ pageurl|e }}&hashtags=nuitka" target="_blank">
             <div class="socialbutton twitter">
                 <p class="icon">
-                    <img src="/_static/icon-twitter.png" alt="Share with Twitter">
+                    <img src="/_static/icon-twitter.png" alt="Share with Twitter" width="24" height="24">
                 </p>
 
                 <p class="shares">share...</p>
@@ -20,7 +17,7 @@
         <a href="https://www.facebook.com/sharer.php?u={{ pageurl|e }}&hashtag=%23nuitka" target="_blank">
             <div class="socialbutton facebook">
                 <p class="icon">
-                    <img src="/_static/icon-facebook.png" alt="Share with Facebook">
+                    <img src="/_static/icon-facebook.png" alt="Share with Facebook" width="24" height="24">
                 </p>
 
                 <p class="shares">share...</p>
@@ -30,7 +27,7 @@
         <a href="https://mastodonshare.com/?url={{ pageurl|e }}" target="_blank">
             <div class="socialbutton mastodon">
                 <p class="icon">
-                    <img src="/_static/icon-mastodon.svg" alt="Share with Mastodon">
+                    <img src="/_static/icon-mastodon.svg" alt="Share with Mastodon" width="24" height="24">
                 </p>
 
                 <p class="shares">share...</p>
@@ -40,7 +37,7 @@
         <a href="http://www.reddit.com/submit?url={{ pageurl|e }}" target="_blank">
             <div class="socialbutton reddit">
                 <p class="icon">
-                    <img src="/_static/icon-reddit.png" alt="Share with Reddit">
+                    <img src="/_static/icon-reddit.png" alt="Share with Reddit" width="24" height="24">
                 </p>
 
                 <p class="shares">share...</p>
@@ -79,41 +76,12 @@
         </details>
     </div>
 </div>
-{{ body }}
-<div class="section ablog__blog_comments">
-  {% if pagename in ablog %}
-  {% include "ablog/postnavy.html" %}
-  {% endif %}
-  {% if ablog.disqus_shortname and ablog.blog_baseurl and (not ablog[pagename].nocomments) and ((pagename in ablog and (ablog[pagename].published or ablog.disqus_drafts)) or (not pagename in ablog and ablog.disqus_pages)) %}
-  <div class="section ablog__comments">
-    <h2>Comments</h2>
-    <div id="disqus_thread"></div>
-    <script type="text/javascript">
-      var disqus_shortname = "{{ ablog.disqus_shortname }}";
-      var disqus_identifier = "{{ablog.page_id(pagename)}}";
-      var disqus_title = "{{title|e}}";
-      var disqus_url = "{{ablog.page_url(pagename)}}";
 
-      (function () {
-        var dsq = document.createElement("script");
-        dsq.type = "text/javascript";
-        dsq.async = true;
-        dsq.src = "//" + disqus_shortname + ".disqus.com/embed.js";
-        (
-          document.getElementsByTagName("head")[0] ||
-          document.getElementsByTagName("body")[0]
-        ).appendChild(dsq);
-      })();
-    </script>
-    <noscript>
-      Please enable JavaScript to view the
-      <a href="https://disqus.com/?ref_noscript">
-        comments powered by Disqus.</a ></noscript >
-    <a href="https://disqus.com" class="dsq-brlink">
-      comments powered by <span class="logo-disqus">Disqus</span>
-    </a >
-  </div>
-  {% endif %}
+{% if pagename in ablog %}
+<div class='blog-post-box'>
+    Blog Post!
 </div>
 
-{% endblock body %}
+{% endif %}
+
+{% endblock %}
