--- a/_templates/footer.html
+++ b/_templates/footer.html
@@ -78,8 +78,33 @@
 </div>
 
 {% if pagename in ablog %}
+
+{% set fa = ablog.fontawesome %}
+{% set post = ablog[pagename] %}
+
 <div class='blog-post-box'>
-    Blog Post!
+    <h2>
+        {% if post.published %}
+        {% if fa %}
+        <i class="fa fa-calendar"></i>
+        {% endif %}
+        {{ post.date.strftime(ablog.post_date_format) }}
+        {% else %}
+        {% if fa %}
+        <i class="fa fa-pencil"></i>
+        {% endif %}
+        {% if post.date %}
+        {{ post.date.strftime(ablog.post_date_format) }}
+        {% else %}
+        Draft
+        {% endif %}
+        {% endif %}
+      </h2>
+
+      <ul>
+        {% include "ablog/postcard2.html" %}
+      </ul>
+
 </div>
 
 {% endif %}
