--- a/_templates/footer.html
+++ b/_templates/footer.html
@@ -44,26 +44,11 @@
             </div>
         </a>
 
-        <details class="sd-sphinx-override sd-dropdown sd-card sd-mb-3 switcher-container">
-            <summary class="sd-summary-title sd-card-header switcher-title">
-                EN<div class="sd-summary-down docutils">
-                    <svg version="1.1" width="1.5em" height="1.5em" class="sd-octicon sd-octicon-chevron-down"
-                        viewbox="0 0 24 24" aria-hidden="true">
-                        <path fill-rule="evenodd"
-                            d="M5.22 8.72a.75.75 0 000 1.06l6.25 6.25a.75.75 0 001.06 0l6.25-6.25a.75.75 0 00-1.06-1.06L12 14.44 6.28 8.72a.75.75 0 00-1.06 0z">
-                        </path>
-                    </svg>
-                </div>
-                <div class="sd-summary-up docutils">
-                    <svg version="1.1" width="1.5em" height="1.5em" class="sd-octicon sd-octicon-chevron-up"
-                        viewbox="0 0 24 24" aria-hidden="true">
-                        <path fill-rule="evenodd"
-                            d="M18.78 15.28a.75.75 0 000-1.06l-6.25-6.25a.75.75 0 00-1.06 0l-6.25 6.25a.75.75 0 101.06 1.06L12 9.56l5.72 5.72a.75.75 0 001.06 0z">
-                        </path>
-                    </svg>
-                </div>
+        <details class="sd-sphinx-override sd-dropdown sd-card sd-mb-3 language-switcher-container">
+            <summary class="language-switcher-title">
+                EN
             </summary>
-            <div class="sd-summary-content sd-card-body switcher-body docutils">
+            <div class="sd-summary-content sd-card-body language-switcher-body docutils">
                 <blockquote>
                     <div>
                         <div class="line-block">
