--- a/_templates/footer.html
+++ b/_templates/footer.html
@@ -2,10 +2,10 @@
 
 {%- block extrafooter %}
 <div class='share-button-container'>
-    <div class="socialbutton-wrapper">
+    <div class="social-button-wrapper">
 
         <a href="https://twitter.com/share?url={{ pageurl|e }}&hashtags=nuitka" target="_blank">
-            <div class="socialbutton twitter">
+            <div class="social-button twitter">
                 <p class="icon">
                     <img src="/_static/icon-twitter.png" alt="Share with Twitter" width="24" height="24">
                 </p>
@@ -15,7 +15,7 @@
         </a>
 
         <a href="https://www.facebook.com/sharer.php?u={{ pageurl|e }}&hashtag=%23nuitka" target="_blank">
-            <div class="socialbutton facebook">
+            <div class="social-button facebook">
                 <p class="icon">
                     <img src="/_static/icon-facebook.png" alt="Share with Facebook" width="24" height="24">
                 </p>
@@ -25,7 +25,7 @@
         </a>
 
         <a href="https://mastodonshare.com/?url={{ pageurl|e }}" target="_blank">
-            <div class="socialbutton mastodon">
+            <div class="social-button mastodon">
                 <p class="icon">
                     <img src="/_static/icon-mastodon.svg" alt="Share with Mastodon" width="24" height="24">
                 </p>
@@ -35,7 +35,7 @@
         </a>
 
         <a href="http://www.reddit.com/submit?url={{ pageurl|e }}" target="_blank">
-            <div class="socialbutton reddit">
+            <div class="social-button reddit">
                 <p class="icon">
                     <img src="/_static/icon-reddit.png" alt="Share with Reddit" width="24" height="24">
                 </p>
