--- a/_templates/footer.html
+++ b/_templates/footer.html
@@ -7,40 +7,40 @@
         <a href="https://twitter.com/share?url={{ pageurl|e }}&hashtags=nuitka" target="_blank">
             <div class="social-button twitter">
                 <p class="icon">
-                    <img src="/_static/icon-twitter.png" alt="Share with Twitter" width="24" height="24">
+                    <img src="/_static/x-twitter.svg" alt="Share with Twitter" width="24" height="24">
                 </p>
 
-                <p class="shares">share...</p>
+                <p class="shares">share</p>
             </div>
         </a>
 
         <a href="https://www.facebook.com/sharer.php?u={{ pageurl|e }}&hashtag=%23nuitka" target="_blank">
             <div class="social-button facebook">
                 <p class="icon">
-                    <img src="/_static/icon-facebook.png" alt="Share with Facebook" width="24" height="24">
+                    <img src="/_static/facebook.svg" alt="Share with Facebook" width="15" height="15">
                 </p>
 
-                <p class="shares">share...</p>
+                <p class="shares">share</p>
             </div>
         </a>
 
         <a href="https://mastodonshare.com/?url={{ pageurl|e }}" target="_blank">
             <div class="social-button mastodon">
                 <p class="icon">
-                    <img src="/_static/icon-mastodon.svg" alt="Share with Mastodon" width="24" height="24">
+                    <img src="/_static/mastodon.svg" alt="Share with Mastodon" width="21" height="21">
                 </p>
 
-                <p class="shares">share...</p>
+                <p class="shares">share</p>
             </div>
         </a>
 
         <a href="http://www.reddit.com/submit?url={{ pageurl|e }}" target="_blank">
             <div class="social-button reddit">
                 <p class="icon">
-                    <img src="/_static/icon-reddit.png" alt="Share with Reddit" width="24" height="24">
+                    <img src="/_static/reddit.svg" alt="Share with Reddit" width="24" height="24">
                 </p>
 
-                <p class="shares">share...</p>
+                <p class="shares">share</p>
             </div>
         </a>
 
