Moved top nav bar link contents to footer
* Also fixed an HTML mistake in it, the image tag was not closed.

--- a/_templates/footer.html
+++ b/_templates/footer.html
@@ -60,6 +60,22 @@
             </div>
         </details>
     </div>
+
+    <nav class="top_link_nav" role='navigation'>
+        <ul>
+          <li>
+              <div class="logo_container">
+                  <a href="/">
+                  <img src="/_static/Nuitka-Logo-Symbol.svg" class="logo" alt="Nuitka Logo" width="28" height="28">
+                  </a>
+              </div>
+          </li>
+          <li><a href="/user-documentation/user-manual.html">Manual</a></li>
+          <li><a href="/doc/commercial.html">Commercial</a></li>
+          <li><a href="/news.html">Blog</a></li>
+          <li><div class="ci-search"></div></li>
+        </ul>
+    </nav>
 </div>
 
 {% if pagename in ablog %}
