Point to documentation hub

--- a/_templates/footer.html
+++ b/_templates/footer.html
@@ -70,7 +70,7 @@
                   </a>
               </div>
           </li>
-          <li class="no_mobile"><a href="/user-documentation/user-manual.html">Manual</a></li>
+          <li class="no_mobile"><a href="/user-documentation/">Manual</a></li>
           <li class="no_mobile"><a href="/doc/commercial.html">Commercial</a></li>
           <li class="no_mobile"><a href="/news.html">Blog</a></li>
           <li><div class="ci-search"></div></li>
