--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -6,4 +6,5 @@
       <script src="{{ pathto(scriptfile, 1) }}"></script>
     {% endif %}
   {% endfor %}
+  <script src="{{ pathto('_static/rtd-theme.js', 1) }}"></script>
 {% endblock %}
